1、完成针对querytask的对比功能；2、修改了属性文档页面

--- a/res/layout/childs.xml
+++ b/res/layout/childs.xml
@@ -8,6 +8,7 @@
        android:layout_width="500dip"  
        android:layout_height="60dp"  
        android:paddingLeft="10dp"  
+       android:background="@drawable/selector_doc_item"
        android:textColor="@android:color/background_dark"
        android:gravity="center_vertical"  
        />  
