--- a/res/layout/adapter_layout_spinner.xml
+++ b/res/layout/adapter_layout_spinner.xml
@@ -5,6 +5,7 @@
     android:singleLine="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:textSize="18sp"
     android:background="@drawable/png_spiner_extend"
     android:ellipsize="marquee"
     android:textAlignment="inherit"/>
