--- a/res/layout/layout_condition_query_compotent.xml
+++ b/res/layout/layout_condition_query_compotent.xml
@@ -6,7 +6,7 @@
 
     <Spinner
         android:id="@+id/id_spner_first"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content" />
 
     <TextView
@@ -16,7 +16,7 @@
 
     <Spinner
         android:id="@+id/id_spner_geology"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content" />
 
     <TextView
@@ -26,7 +26,7 @@
 
     <Spinner
         android:id="@+id/id_spner_condition"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content" />
 
     <TextView
@@ -36,7 +36,7 @@
 
     <Spinner
          android:id="@+id/id_spner_condition_value"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content" />
     
     <EditText
