--- a/res/layout/select_layout.xml
+++ b/res/layout/select_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-        android:paddingLeft="5dp"
+    android:paddingLeft="5dp"
     android:paddingRight="5dp" >
 
     <LinearLayout
@@ -12,7 +12,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:background="@drawable/toolbottom_bg"
+        android:background="@drawable/search_fragment_title_bg"
         android:gravity="center_vertical"
         android:orientation="horizontal" >
 
@@ -45,20 +45,25 @@
             <ExpandableListView
                 android:id="@+id/expanList"
                 android:layout_width="fill_parent"
-                android:layout_weight="5"
                 android:layout_height="800dip"
+                android:layout_weight="5"
                 android:cacheColorHint="#00000000"
-                android:divider="@color/lightgray"
-                android:scrollbars="none"
-                android:dividerHeight="1dp" />
+                android:divider="@color/doc_listview_divider"
+                android:dividerHeight="1dp"
+                android:scrollbars="none" />
+
+            <ImageView
+                android:layout_width="1dp"
+                android:layout_height="800dip"
+                android:background="@color/doc_vertical_divider" />
 
             <LinearLayout
                 android:id="@+id/content"
-                android:gravity="center"
                 android:layout_width="fill_parent"
-                android:layout_weight="1"
                 android:layout_height="800dp"
-                android:background="@color/lightyellow"
+                android:layout_weight="1"
+                android:background="@color/doc_content_color"
+                android:gravity="center"
                 android:orientation="horizontal" >
             </LinearLayout>
         </LinearLayout>
@@ -66,8 +71,8 @@
         <ImageView
             android:layout_width="2dip"
             android:layout_height="match_parent"
-            android:src="@android:color/holo_orange_dark" 
-            android:visibility="gone"/>
+            android:src="@android:color/holo_orange_dark"
+            android:visibility="gone" />
 
         <ListView
             android:id="@+id/listView"
@@ -75,8 +80,8 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:background="#f3f1f1"
-            android:cacheColorHint="#00000000" 
-            android:visibility="gone"/>
+            android:cacheColorHint="#00000000"
+            android:visibility="gone" />
     </LinearLayout>
 
 </LinearLayout>
