--- a/res/drawable/selector_btn_toolbar.xml
+++ b/res/drawable/selector_btn_toolbar.xml
@@ -3,5 +3,7 @@
 	<item android:state_focused="false" android:state_pressed="true"
 		android:drawable="@color/lightyellow" />
 	<item android:state_selected="true" android:drawable="@color/lightyellow" />
+	<item android:state_checked="true" android:drawable="@color/lightyellow" />
 	<item android:state_focused="false" android:drawable="@color/white" />
+	<item android:state_checked="false" android:drawable="@color/white" />
 </selector>
