--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -139,6 +139,7 @@
                     <Button
                         android:id="@+id/btn_map_layout"
                         style="@style/btn_toolbar_btn"
+                        android:background="@drawable/btn_layer"
                         android:drawableTop="@drawable/tc"
                         android:text="@string/btn_layout" />
 
@@ -228,45 +229,52 @@
                         android:background="@drawable/toolbottom_bg"
                         android:orientation="horizontal" >
 
-                        <com.sinopec.view.MenuButton
-                            android:id="@+id/menuview_tool"
-                            style="@style/btn_menuview_btn"
-                            iconbutton:icon="@drawable/menu_tool"
-                            iconbutton:mtext="@string/btn_tool"
-                            iconbutton:relation="icon_right"
-                            iconbutton:text_size="16sp" />
+                        <RadioGroup
+                            android:id="@+id/radiogroup_personal_condition"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal" >
 
-                        <com.sinopec.view.MenuButton
-                            android:id="@+id/menuview_search"
-                            style="@style/btn_menuview_btn"
-                            iconbutton:icon="@drawable/menu_mine"
-                            iconbutton:mtext="@string/btn_search"
-                            iconbutton:relation="icon_right"
-                            iconbutton:text_size="16sp" />
+                            <com.sinopec.view.MenuButton
+                                android:id="@+id/menuview_tool"
+                                style="@style/btn_menuview_btn"
+                                iconbutton:icon="@drawable/menu_tool"
+                                iconbutton:mtext="@string/btn_tool"
+                                iconbutton:relation="icon_right"
+                                iconbutton:text_size="16sp" />
 
-                        <com.sinopec.view.MenuButton
-                            android:id="@+id/menuview_count"
-                            style="@style/btn_menuview_btn"
-                            iconbutton:icon="@drawable/menu_count"
-                            iconbutton:mtext="@string/btn_count"
-                            iconbutton:relation="icon_right"
-                            iconbutton:text_size="16sp" />
+                            <com.sinopec.view.MenuButton
+                                android:id="@+id/menuview_search"
+                                style="@style/btn_menuview_btn"
+                                iconbutton:icon="@drawable/menu_search"
+                                iconbutton:mtext="@string/btn_search"
+                                iconbutton:relation="icon_right"
+                                iconbutton:text_size="16sp" />
 
-                        <com.sinopec.view.MenuButton
-                            android:id="@+id/menuview_compare"
-                            style="@style/btn_menuview_btn"
-                            iconbutton:icon="@drawable/menu_compare"
-                            iconbutton:mtext="@string/btn_compare"
-                            iconbutton:relation="icon_right"
-                            iconbutton:text_size="16sp" />
+                            <com.sinopec.view.MenuButton
+                                android:id="@+id/menuview_count"
+                                style="@style/btn_menuview_btn"
+                                iconbutton:icon="@drawable/menu_count"
+                                iconbutton:mtext="@string/btn_count"
+                                iconbutton:relation="icon_right"
+                                iconbutton:text_size="16sp" />
 
-                        <com.sinopec.view.MenuButton
-                            android:id="@+id/menuview_mine"
-                            style="@style/btn_menuview_btn"
-                            iconbutton:icon="@drawable/menu_mine"
-                            iconbutton:mtext="@string/btn_mine"
-                            iconbutton:relation="icon_null"
-                            iconbutton:text_size="16sp" />
+                            <com.sinopec.view.MenuButton
+                                android:id="@+id/menuview_compare"
+                                style="@style/btn_menuview_btn"
+                                iconbutton:icon="@drawable/menu_compare"
+                                iconbutton:mtext="@string/btn_compare"
+                                iconbutton:relation="icon_right"
+                                iconbutton:text_size="16sp" />
+
+                            <com.sinopec.view.MenuButton
+                                android:id="@+id/menuview_mine"
+                                style="@style/btn_menuview_btn"
+                                iconbutton:icon="@drawable/menu_mine"
+                                iconbutton:mtext="@string/btn_mine"
+                                iconbutton:relation="icon_null"
+                                iconbutton:text_size="16sp" />
+                        </RadioGroup>
                     </LinearLayout>
                 </LinearLayout>
             </RelativeLayout>
@@ -285,7 +293,6 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:visibility="gone" />
-
     </RelativeLayout>
 
     <RelativeLayout
