--- a/res/layout/layout_condition_query.xml
+++ b/res/layout/layout_condition_query.xml
@@ -12,6 +12,7 @@
     <LinearLayout
         android:layout_width="1000dip"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:orientation="horizontal" >
 
         <TextView
@@ -62,7 +63,7 @@
         style="@style/text_mid_size"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center_vertiver|right"
         android:layout_marginTop="10dp"
         android:background="@drawable/selector_btn_search_confirm"
         android:text="@string/confirm"
