--- a/res/layout/groups.xml
+++ b/res/layout/groups.xml
@@ -2,13 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/expand_listview_group_item_bg"
     android:orientation="vertical" >
       <TextView  
        android:id="@+id/mytextview_groups"  
         android:layout_width="fill_parent"  
        android:layout_height="60dp"  
       android:paddingLeft="40dp"  
-       android:textColor="@android:color/background_dark"
+      android:textSize="25sp"
+      android:textColor="@color/white"
+      android:textStyle="bold"
       android:gravity="center_vertical"  
       />  
       
