--- a/res/layout/adapter_layout_spinner.xml
+++ b/res/layout/adapter_layout_spinner.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="18sp"
-    android:background="@drawable/png_spiner_extend"
+  	android:gravity="center"
+    android:textColor="@color/black"
+    android:background="@drawable/spinner_item"
     android:ellipsize="marquee"
     android:textAlignment="inherit"/>
