--- a/res/layout/layout_condition_query.xml
+++ b/res/layout/layout_condition_query.xml
@@ -2,8 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/layer_bg"
     android:alpha="0.8"
+    android:background="@drawable/layer_bg"
     android:orientation="vertical"
     android:paddingBottom="15dp"
     android:paddingLeft="15dp"
@@ -11,7 +11,7 @@
     android:paddingTop="10dp" >
 
     <RelativeLayout
-        android:layout_width="1000dip"
+        android:layout_width="1000dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
@@ -23,11 +23,14 @@
             android:text="定制查询"
             android:textSize="30sp" />
     </RelativeLayout>
-	<ImageView 
-	             android:layout_width="800dp"
-            android:layout_height="3dp"
-	android:background="@color/blue_light_press"
-	    />
+
+    <ImageView
+        android:layout_width="900dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="8dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@color/black" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -69,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/selector_btn_search_confirm"
         android:text="@string/confirm"
         android:textColor="@color/white" />
