--- a/res/layout/layout_condition_query_compotent.xml
+++ b/res/layout/layout_condition_query_compotent.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:gravity="center_vertical"
     android:orientation="horizontal" >
 
     <Spinner
@@ -10,6 +11,7 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        style="@style/spinner_title_tag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="地质对象" />
@@ -17,9 +19,11 @@
     <Spinner
         android:id="@+id/id_spner_geology"
         android:layout_width="150dp"
+        android:background="@drawable/png_spiner_extend"
         android:layout_height="wrap_content" />
 
     <TextView
+        style="@style/spinner_title_tag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="条件" />
@@ -30,27 +34,34 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        style="@style/spinner_title_tag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="条件值" />
 
     <Spinner
-         android:id="@+id/id_spner_condition_value"
+        android:id="@+id/id_spner_condition_value"
         android:layout_width="180dp"
         android:layout_height="wrap_content" />
-    
+
     <EditText
         android:id="@+id/id_spner_condition_custom_value1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
-        android:visibility="gone"
+        android:layout_height="wrap_content"
+        android:background="@drawable/max_and_min"
+        style="@style/spinner_title_tag"
         android:hint="最小值"
-        />
+        android:layout_marginLeft="5dp"
+        android:visibility="gone" />
+
     <EditText
-        android:hint="最大值"
-        android:visibility="gone"
         android:id="@+id/id_spner_condition_custom_value2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        style="@style/spinner_title_tag"
+        android:hint="最大值"
+        android:layout_marginLeft="5dp"
+        android:background="@drawable/max_and_min"
+        android:visibility="gone" />
 
 </LinearLayout>
