--- a/res/layout/adapter_layout_spinner.xml
+++ b/res/layout/adapter_layout_spinner.xml
@@ -4,10 +4,9 @@
     android:id="@android:id/text1"
     android:singleLine="true"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="35dp"
     android:textSize="18sp"
   	android:gravity="center"
     android:textColor="@color/black"
-    android:background="@drawable/spinner_item"
     android:ellipsize="marquee"
     android:textAlignment="inherit"/>
