--- a/res/layout/item_history.xml
+++ b/res/layout/item_history.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:singleLine="true"
+        android:layout_gravity="center"
         android:paddingLeft="2dp"
         android:textColor="#000000"
         android:textSize="17sp" />
