--- a/res/layout/select_layout.xml
+++ b/res/layout/select_layout.xml
@@ -42,15 +42,32 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
 
-            <ExpandableListView
-                android:id="@+id/expanList"
+            <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="800dip"
+                    android:layout_height="800dip"
                 android:layout_weight="5"
-                android:cacheColorHint="#00000000"
-                android:divider="@color/doc_listview_divider"
-                android:dividerHeight="1dp"
-                android:scrollbars="none" />
+                android:orientation="vertical" >
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/expand_listview_group_item_bg"
+				      android:textSize="25sp"
+				      android:textColor="@color/white"
+				      android:textStyle="bold"
+				      android:gravity="center"  
+                    android:text="" />
+
+                <ListView
+                    android:id="@+id/expanList"
+                    android:layout_width="fill_parent"
+                    android:layout_height="800dip"
+                    android:cacheColorHint="#00000000"
+                    android:divider="@color/doc_listview_divider"
+                    android:dividerHeight="1dp"
+                    android:scrollbars="none" />
+            </LinearLayout>
 
             <ImageView
                 android:layout_width="1dp"
@@ -63,32 +80,17 @@
                 android:layout_height="800dp"
                 android:layout_weight="1"
                 android:background="@color/doc_content_color"
-                android:orientation="horizontal" 
-                android:padding="10dp">
+                android:orientation="horizontal"
+                android:padding="10dp" >
 
                 <ScrollView
                     android:id="@+id/scrollview_content"
                     android:layout_width="fill_parent"
                     android:layout_height="700dp"
-                    android:padding="20dp"
-                    android:background="@color/white"/>
+                    android:background="@color/white"
+                    android:padding="20dp" />
             </LinearLayout>
         </LinearLayout>
-
-        <ImageView
-            android:layout_width="2dip"
-            android:layout_height="match_parent"
-            android:src="@android:color/holo_orange_dark"
-            android:visibility="gone" />
-
-        <ListView
-            android:id="@+id/listView"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:background="#f3f1f1"
-            android:cacheColorHint="#00000000"
-            android:visibility="gone" />
     </LinearLayout>
 
 </LinearLayout>
