--- a/res/layout/select_layout.xml
+++ b/res/layout/select_layout.xml
@@ -7,28 +7,43 @@
     android:paddingLeft="5dp"
     android:paddingRight="5dp" >
 
-    <LinearLayout
-        android:id="@+id/menu_children_grid"
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:background="@drawable/search_fragment_title_bg"
-        android:gravity="center_vertical"
-        android:orientation="horizontal" >
+        android:paddingRight="10dp"
+        android:background="@drawable/search_fragment_title_bg">
 
-        <ImageButton
-            android:id="@+id/btn_login_back"
+        <LinearLayout
+            android:layout_alignParentLeft="true"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" >
+
+            <ImageButton
+                android:id="@+id/btn_login_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/selector_btn_back" />
+
+            <TextView
+                android:id="@+id/titleName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/background_dark"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <CheckBox
+            android:id="@+id/checkbox_store"
+            android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/selector_btn_back" />
-
-        <TextView
-            android:id="@+id/titleName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/background_dark"
-            android:textSize="20sp" />
-    </LinearLayout>
+            android:layout_centerVertical="true"
+            android:button="@drawable/selector_btn_store"
+            android:textColor="@color/black" />
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/leftLayout"
@@ -44,7 +59,7 @@
 
             <LinearLayout
                 android:layout_width="fill_parent"
-                    android:layout_height="800dip"
+                android:layout_height="800dip"
                 android:layout_weight="5"
                 android:orientation="vertical" >
 
@@ -53,11 +68,11 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/expand_listview_group_item_bg"
-				      android:textSize="25sp"
-				      android:textColor="@color/white"
-				      android:textStyle="bold"
-				      android:gravity="center"  
-                    android:text="" />
+                    android:gravity="center"
+                    android:text=""
+                    android:textColor="@color/white"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
 
                 <ListView
                     android:id="@+id/expanList"
