--- a/res/layout/layout_condition_query.xml
+++ b/res/layout/layout_condition_query.xml
@@ -63,7 +63,9 @@
             android:id="@+id/id_llayout_item_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical" 
+            android:clickable="true"
+            />
     </ScrollView>
 
     <Button
