--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="oilgas_url_theme_4search">
+   <!--<string-array name="oilgas_url_theme_4search">
         
         <item>@string/url_cover_4search</item>
         <item>@string/url_source_rock_4search</item>
@@ -8,35 +8,23 @@
         <item>@string/url_oilfields_4search</item>
         <item>@string/url_gasfields_4search</item>
         <item>@string/url_basin_4search</item>
-    </string-array> 
-    <string-array name="oilgas_url_theme">
+    </string-array> -->
+   <!-- <string-array name="oilgas_url_theme">
         <item>@string/url_cover</item>
         <item>@string/url_source_rock</item>
         <item>@string/url_reservoir</item>/
         <item>@string/url_oilfields</item>
         <item>@string/url_gasfields</item>
         <item>@string/url_basin</item>
-    </string-array> 
-    
-    
-    <string-array name="all_layer_urls">
-        <item>@string/url_marine_image</item>
+    </string-array>-->
+
+    <!--<string-array name="all_layer_urls_4geo">
         <item>@string/url_marine_geo</item>
         <item>@string/url_basin</item>
         <item>@string/url_oilfields</item>
         <item>@string/url_gasfields</item>
-        <item>@string/url_cover</item>
-        <item>@string/url_source_rock</item>
-        <item>@string/url_reservoir</item>
-        
-    </string-array> 
-    
-    <string-array name="all_layer_urls_4geo">
-        <item>@string/url_marine_geo</item>
-        <item>@string/url_basin</item>
-        <item>@string/url_oilfields</item>
-        <item>@string/url_gasfields</item>
-    </string-array> 
+    </string-array>-->
+
     <string-array name="all_layer_name">
        <item>盖层</item>
        <item>烃源岩 </item>
